列表分页处理、及各页面返回列表时链接处理

--- a/TeamCores.Web/Views/Exams/MyTestList.cshtml
+++ b/TeamCores.Web/Views/Exams/MyTestList.cshtml
@@ -7,7 +7,7 @@
     <div class="searcher">
         <span>
             状态：
-            <i-select v-model="searchQuery.status" style="width: 100px">
+            <i-select v-model="queries.status" style="width: 100px">
                 <i-option value="" key="">全部</i-option>
                 <i-option v-for="item in ExamMarkingStatus.items" :value="item.value" :key="item.value">{{item.text}}</i-option>
             </i-select>
@@ -17,7 +17,7 @@
         </span>
     </div>
     <i-table :columns="gridColumns" :data="gridData"></i-table>
-    <Page class-name="pager" :total="searchQuery.total" :current="searchQuery.pageindex" :paeg-size="searchQuery.pagesize" show-total>
+    <Page class-name="pager" :total="queries.total" :current="queries.p" :paeg-size="queries.size" v-on:on-change="pagerChanged" show-total>
     </Page>
 </div>
 @section title_actions{
@@ -27,9 +27,9 @@
     <script>
         var vm = new Vue({
             el: '#content',
-            data: {
+			data: {
+				queries: {},
                 courses: {},
-                searchQuery: {},
                 gridColumns: [
                     {
                         key: 'ExamTitle',
@@ -160,51 +160,60 @@
                 ]
             },
             mounted() {
-                this.reviseSearchQuery(15, 1, 0, '', '', '');
+				this.loadQueries();
                 this.loadData();
             },
             methods:
             {
                 /**
+				 * 加载筛选条件
+				 */
+				loadQueries() {
+					let pageIndex,
+						type,
+						status;
+
+					pageIndex =@(Html.Raw("'" + Html.ViewContext.HttpContext.Request.Query["p"] + "'"));
+					pageIndex = isNaN(pageIndex) ? 1 : Number(pageIndex);
+					if (pageIndex < 1) pageIndex = 1;
+
+					status =@(Html.Raw("'" + Html.ViewContext.HttpContext.Request.Query["status"] + "'"));
+					if (status != "" && !isNaN(status)) status = Number(status);
+
+					this.queries["p"] = pageIndex;
+					this.queries["size"] = 15;
+					this.queries["status"] = status;
+				},
+				/**
+				 * 分页页码改变回调事件
+				 * @@param {number} current 当前页码
+				 */
+				pagerChanged(current) {
+					this.queries["p"] = current;
+					this.reload();
+				},
+				/**
                  * 搜索
                 */
-                search() {
-                    this.reviseSearchQuery(15, 1);
-                    this.loadData();
-                },
-                /**
-                 * 校正searchQuery的参数值
-                 * @@param pageSize 每页条数
-                 * @@param pageIndex 当前页码
-                 * @@param totalResult 数据总数
-				 * @@param status 阅卷状态
-                */
-                reviseSearchQuery(pageSize, pageIndex, totalResult, status) {
-                    if (pageIndex) {
-                        this.searchQuery['pageindex'] = pageIndex;
-                    }
-                    if (pageSize) {
-                        this.searchQuery['pagesize'] = pageSize;
-                    }
-                    if (totalResult) {
-                        this.searchQuery['total'] = totalResult;
-                    }
-                    if (status) {
-                        this.searchQuery['status'] = status;
-                    }
-                },
+				search() {
+					this.queries["p"] = 1;
+					this.reload();
+				},
+				/**
+				 * 重新加载
+				 */
+				reload() {
+					var url = buildUrl(location.href.toString(), this.queries);
+					location.href = url;
+				},
                 /**
                  * 加载数据，会自动从searchQuery中解析搜索的参数
                  */
                 loadData() {
-                    var pagesize = this.searchQuery.pagesize;
-                    var pageindex = this.searchQuery.pageindex;
-                    var status = typeof (this.searchQuery.status) === 'undefined' ? '' : this.searchQuery.status;
-
-                    const postData = {
-                        status: status,
-                        pageindex: pageindex,
-                        pagesize: pagesize
+					const postData = {
+						status: this.queries.status,
+						pageindex: this.queries.p,
+						pagesize: this.queries.size
                     };
 
                     Ajax.post({
@@ -215,9 +224,10 @@
                             if (!data.Error) {
                                 var pager = data.Data;
                                 this.gridData = pager.Table;
-                                this.reviseSearchQuery(pager.Size, pager.Index, pager.Count);
-                            } else {
-                                this.$Message.error(data.Message);
+
+								this.queries["total"] = pager.Count;
+							} else {
+								apiError(data.Code);
                             }
                         }
                     });
