--- a/TeamCores.Web/Views/StudyPlan/Details.cshtml
+++ b/TeamCores.Web/Views/StudyPlan/Details.cshtml
@@ -147,7 +147,7 @@
             methods: {
                 // 返回列表
                 goList() {
-                    location = "/studyplan/index";
+					goBack("/studyplan/index?tab=plans");
                 },
                 /**
                  * 获取学员信息
