--- a/TeamCores.Web/Views/UserStudyPlan/Details.cshtml
+++ b/TeamCores.Web/Views/UserStudyPlan/Details.cshtml
@@ -144,8 +144,8 @@
 			},
             methods: {
                 // 返回列表
-                goList() {
-                    location = "/studyplan/index";
+				goList() {
+					goBack("/studyplan/index?tab=myplans");
                 },
                 /**
                  * 跳转到课程详细信息页链接
